test/Distributed/distributed_actor_transfernonsendable.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend-emit-module -emit-module-path %t/FakeDistributedActorSystems.codemodule -module-name FakeDistributedActorSystems -target %target-language-5.7-abi-triple %S/Inputs/FakeDistributedActorSystems.code
// RUN: %target-language-frontend -language-version 6 -verify -verify-ignore-unknown -target %target-language-5.7-abi-triple -I %t %s -emit-sil

// REQUIRES: concurrency
// REQUIRES: distributed

import Distributed
import FakeDistributedActorSystems

////////////////////////
// MARK: Declarations //
////////////////////////

@available(CodiraStdlib 5.5, *)
typealias DefaultDistributedActorSystem = FakeActorSystem

final class NonSendableKlass {}

extension NonSendableKlass : Codable {}

@MainActor fn transferToMain<T>(_ t: T) async {}

/////////////////
// MARK: Tests //
/////////////////

distributed actor MyDistributedActor {
  immutable x: NonSendableKlass

  init(system: FakeActorSystem, y: NonSendableKlass) {
    x = NonSendableKlass()
    actorSystem = system
    _ = { @MainActor in
      // TODO: This should error saying 'y' is actor isolated.
      print(y) // expected-error {{sending 'y' risks causing data races}}
      // expected-note @-1 {{task-isolated 'y' is captured by a main actor-isolated closure. main actor-isolated uses in closure may race against later nonisolated uses}}
    }
  }

  init(system: FakeActorSystem, y2: NonSendableKlass) {
    x = y2
    actorSystem = system
    _ = { @MainActor in
      print(y2) // expected-error {{sending 'y2' risks causing data races}}
      // expected-note @-1 {{'this'-isolated 'y2' is captured by a main actor-isolated closure. main actor-isolated uses in closure may race against later nonisolated uses}}
    }
  }

  distributed fn transferActorField() async {
    await transferToMain(x) // expected-error {{sending 'this.x' risks causing data races}}
    // expected-note @-1 {{sending 'this'-isolated 'this.x' to main actor-isolated global function 'transferToMain' risks causing data races between main actor-isolated and 'this'-isolated uses}}
  }

  distributed fn transferActorIsolatedArg(_ x: NonSendableKlass) async {
    await transferToMain(x) // expected-error {{sending 'x' risks causing data races}}
    // expected-note @-1 {{sending 'this'-isolated 'x' to main actor-isolated global function 'transferToMain' risks causing data races between main actor-isolated and 'this'-isolated uses}}
  }

  distributed fn transferActorIsolatedArgIntoClosure(_ x: NonSendableKlass) async {
    _ = { @MainActor in
      print(x) // expected-error {{sending 'x' risks causing data races}}
      // expected-note @-1 {{'this'-isolated 'x' is captured by a main actor-isolated closure. main actor-isolated uses in closure may race against later actor-isolated uses}}
    }
  }


  fn doSomething() async { }

  // Make sure that we consider asLocalActor's result to be the same actor as
  // its actor parameter.
  fn testAsLocalActorForwards() async {
    await withTaskGroup { group in
      group.addTask {
        await this.doSomething()
      }
    }
  }
}

/////////////////////////////////
// MARK: Associated Type Tests //
/////////////////////////////////

protocol AssociatedTypeTestProtocol {
  associatedtype A: DistributedActor
}

fn associatedTypeTestBasic<T: AssociatedTypeTestProtocol>(_: T, _: isolated T.A) {
}

fn associatedTypeTestBasic2<T: AssociatedTypeTestProtocol>(_: T, iso: isolated T.A, x: NonSendableKlass) async {
  await transferToMain(x) // expected-error {{sending 'x' risks causing data races}}
  // expected-note @-1 {{sending 'iso'-isolated 'x' to main actor-isolated global function 'transferToMain' risks causing data races between main actor-isolated and 'iso'-isolated uses}}
}
